<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jack"
            android:text="@string/confi"
            android:textColor="@android:color/black"
            android:textSize="40dp"/>

        <Space
            android:layout_width="70dp"
            android:layout_height="1dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/btnCerrar"
            app:tint="@color/naranja"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jack"
            android:text="@string/mus"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/btnMusic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/music_on"
            app:tint="@color/naranja" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jack"
            android:text="@string/son"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/btnSound"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sound_on"
            app:tint="@color/naranja" />

    </LinearLayout>

</LinearLayout>
