<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/ganador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jack"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="40dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player1"
                android:layout_width="94dp"
                android:layout_height="192dp"
                app:srcCompat="@drawable/player1" />

            <ImageView
                android:id="@+id/player2"
                android:layout_width="137dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/player2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jack"
                android:text="@string/playAgain"
                android:textColor="@android:color/black"
                android:textSize="30dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/naranja"
                    android:fontFamily="@font/jack"
                    android:textSize="20dp"
                    android:text="@string/s" />

                <Space
                    android:layout_width="70dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/naranja"
                    android:fontFamily="@font/jack"
                    android:textSize="20dp"
                    android:text="@string/n" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
